[package]
name = "credence_errors"
version = "0.1.0"
edition = "2021"
description = "Shared error types for all Credence smart contracts"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
soroban-sdk = { version = "22.0" }

[dev-dependencies]
soroban-sdk = { version = "22.0", features = ["testutils"] }
